修复docker哪里不能访问html的问题，只能用/var/www/html

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
         volumes:
             # 映射主机./conf.d目录到容器/etc/nginx/conf.d目录
             - "$PWD/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-            - "$PWD/html:/usr/share/nginx/html"
+            - "$PWD/html:/var/www/html"
         # networks:
         #     - app_net
         # 容器名称
