--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
     server_name  localhost;
     location / {
-        root   /var/www/html;
+        root   /vimiliu/html;
         index  index.html index.htm index.php;
     }
     error_page   500 502 503 504  /50x.html;
